# flask-websocket

./: app.py  pyproject.toml  requirements.txt
Flask-Websocket/: bruno.json  qrcode_image.bru
models/: payment.py
payments/: pix.py
templates/: 404.html  confirmed_payment.html  payment.html
tests/: test_pix.py
