[tool.poetry]
name = "flask-websocket"
version = "0.1.0"
description = ""
authors = ["Eduardo Pizorno <pizorno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
qrcode = "^8.0"
pillow = "^11.0.0"
flask-socketio = "^5.4.1"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
